--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Listen and share music of your taste",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "server": "nodemon server.js"
   },
@@ -38,7 +37,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
-    "multer": "^1.4.5-lts.2",
-    "socket.io": "^4.8.1"
+    "multer": "^1.4.5-lts.2"
   }
 }
