--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "music-connect",
   "version": "1.0.0",
   "description": "Listen and share music of your taste",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "server": "nodemon server.js"
   },
@@ -27,6 +27,8 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "@langchain/textsplitters": "^0.1.0",
+    "@xenova/transformers": "^2.17.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "cloudinary-build-url": "^0.2.4",
@@ -34,9 +36,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "groq-sdk": "^0.19.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "socket.io": "^4.8.1"
   }
 }
