--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/thebraudalf/Music-Connect#readme",
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "@fluvio/client": "^0.14.9",
     "@langchain/textsplitters": "^0.1.0",
     "@xenova/transformers": "^2.17.2",
     "bcrypt": "^5.1.1",
@@ -42,6 +45,8 @@
     "mongoose": "^8.13.2",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^1.4.5-lts.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "typescript": "^5.8.3",
+    "undici": "^7.8.0"
   }
 }
