--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@fluvio/client": "^0.14.9",
+    "@langchain/core": "^0.3.51",
     "@langchain/textsplitters": "^0.1.0",
     "@xenova/transformers": "^2.17.2",
     "bcrypt": "^5.1.1",
