--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,5 +1,5 @@
 # Use the Ubuntu base image
-FROM node:18
+FROM node:18-alpine
 
 # Install Fluvio
 RUN curl -fsS https://hub.infinyon.cloud/install/install.sh?ctx=dc | bash
